--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,12 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.236.0/containers/jupyter-datascience-notebooks
 {
-	"name": "Jupyter Data Science Notebooks (Community)",
-	"build": {
-		"dockerfile": "Dockerfile"
-	},
-	"overrideCommand": false,
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "rstudio",
+	"workspaceFolder": "/home/jovyan/work",
+	// "overrideCommand": false,
 	
-	// Forward Jupyter port locally, mark required
+	// // Forward Jupyter port locally, mark required
 	"forwardPorts": [8888],
 	"portsAttributes": {
 		"8888": {
@@ -17,21 +16,21 @@
 		}
 	},
 
-	// Configure tool-specific properties.
-	"customizations": {
-		// Configure properties specific to VS Code.
-		"vscode": {
-			// Set *default* container specific settings.json values on container create.
-			"settings": { 
-				"python.defaultInterpreterPath": "/opt/conda/bin/python"
-			},
-			
-			// Add the IDs of extensions you want installed when the container is created.
-			"extensions": [
-				"ms-python.python"
-			]
-		}
-	},
+	// // Configure tool-specific properties.
+	// "customizations": {
+	// 	// Configure properties specific to VS Code.
+	// 	"vscode": {
+	// 		// Set *default* container specific settings.json values on container create.
+	// 		"settings": { 
+	// 			"python.defaultInterpreterPath": "/opt/conda/bin/python"
+	// 		},
+	// 		
+	// 		// Add the IDs of extensions you want installed when the container is created.
+	// 		"extensions": [
+	// 			"ms-python.python"
+	// 		]
+	// 	}
+	// },
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
