--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,15 +6,15 @@
 	"workspaceFolder": "/home/jovyan/work",
 	// "overrideCommand": false,
 	
-	// // Forward Jupyter port locally, mark required
-	"forwardPorts": [8888],
-	"portsAttributes": {
-		"8888": {
-			"label": "Jupyter",
-			"requireLocalPort": true,
-			"onAutoForward": "ignore"
-		}
-	},
+	// // // Forward Jupyter port locally, mark required
+	// "forwardPorts": [8888],
+	// "portsAttributes": {
+	// 	"8888": {
+	// 		"label": "Jupyter",
+	// 		"requireLocalPort": true,
+	// 		"onAutoForward": "ignore"
+	// 	}
+	// },
 
 	// // Configure tool-specific properties.
 	// "customizations": {
