--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 	// 	"8888": {
 	// 		"label": "Jupyter",
 	// 		"requireLocalPort": true,
-	// 		"onAutoForward": "ignore"
+	// 		"onAutoForward": "openBrowser"
 	// 	}
 	// },
 
