--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,7 @@
 	"forwardPorts": [8888],
 	"portsAttributes": {
 		"8888": {
-			"label": "Jupyter",
+			"label": "RStudio",
 			"requireLocalPort": true,
 			"onAutoForward": "openBrowser"
 		}
