--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,20 +1,8 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.236.0/containers/jupyter-datascience-notebooks
 {
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "rstudio",
 	"overrideCommand": false,
 	"workspaceFolder": "/home/jovyan/work",
-	"otherPortsAttributes": {"onAutoForward": "openBrowser"},
-	// Forward Jupyter port locally, mark required
-	// "forwardPorts": [8888],
-	// "portsAttributes": {
-	// 	"8888": {
-	// 		"label": "Jupyter",
-	// 		"requireLocalPort": true,
-	// 		"onAutoForward": "openBrowser"
-	// 	}
-	// },
 	"forwardPorts": [8888],
 	"portsAttributes": {
 		"8888": {
@@ -23,26 +11,7 @@
 			"onAutoForward": "openBrowser"
 		}
 	},
-
-	// // Configure tool-specific properties.
-	// "customizations": {
-	// 	// Configure properties specific to VS Code.
-	// 	"vscode": {
-	// 		// Set *default* container specific settings.json values on container create.
-	// 		"settings": { 
-	// 			"python.defaultInterpreterPath": "/opt/conda/bin/python"
-	// 		},
-	// 		
-	// 		// Add the IDs of extensions you want installed when the container is created.
-	// 		"extensions": [
-	// 			"ms-python.python"
-	// 		]
-	// 	}
-	// },
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "rmdir /home/jovyan/work; ln -s /workspaces/rstudio /home/jovyan/work",
-
-	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+	"otherPortsAttributes": {"onAutoForward": "openBrowser"},
+	"postCreateCommand": "rmdir /home/jovyan/work && ln -s /workspaces/rstudio /home/jovyan/work",
 	"remoteUser": "jovyan"
 }
