fit to codespaces

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,7 +34,7 @@
 		}
 	},
 
-	"workspaceFolder": "/home/jovyan/work",
+	"workspaceFolder": "/workspaces/rstudio",
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "rmdir /home/jovyan/work && ln -s /workspaces/rstudio /home/jovyan/work",
