--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - SHELL=/bin/zsh
     volumes:
       - ${PWD}:/home/jovyan/work
+      - ${PWD}:/workspaces/rstudio
     command:
       - start-notebook.sh
       - --LabApp.default_url=/rstudio
