--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,7 +10,7 @@ RUN curl --silent -L --fail \
         https://download2.rstudio.org/server/bionic/amd64/rstudio-server-2022.02.3-492-amd64.deb > /tmp/rstudio.deb && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-        /tmp/rstudio.deb lmodern && \
+        /tmp/rstudio.deb lmodern file && \
     groupadd jovyan && \
     usermod -g jovyan -a -G users jovyan && \
     bash /tmp/library-scripts/common-debian.sh && \
