--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,26 +1,14 @@
-FROM jupyter/r-notebook:2022-06-20
+FROM jupyter/r-notebook:ubuntu-22.04
 
 USER root
 
-ARG COPY_CONTEXT=.
-COPY ${COPY_CONTEXT}/library-scripts/common-debian.sh /tmp/library-scripts/
-COPY --chown="${NB_UID}:${NB_GID}" ${COPY_CONTEXT}/library-scripts/get-token.sh /opt/conda/bin/
-
-RUN curl --silent -L --fail \
-        https://download2.rstudio.org/server/bionic/amd64/rstudio-server-2022.02.3-492-amd64.deb > /tmp/rstudio.deb && \
-    apt-get update && \
-    apt-get install -y --no-install-recommends \
-        /tmp/rstudio.deb lmodern file && \
-    groupadd jovyan && \
-    usermod -g jovyan -a -G users jovyan && \
-    bash /tmp/library-scripts/common-debian.sh && \
-    apt-get clean -y && \
-    rm -rf /tmp/rstudio.deb /var/lib/apt/lists/* /tmp/library-scripts
+RUN apt-get update && \
+    apt-get install -y gdebi-core && \
+    wget https://download2.rstudio.org/server/jammy/amd64/rstudio-server-2023.09.1-494-amd64.deb && \
+    gdebi -n rstudio-server-2023.09.1-494-amd64.deb
 
 USER ${NB_UID}
 
-RUN pip install --no-cache-dir \
-        jupyter-server-proxy==3.2.1 \
-        jupyter-rsession-proxy==2.0.1 && \
-    jupyter labextension install @jupyterlab/server-proxy@3.2.1 && \
-    jupyter lab build
+RUN pip install --no-cache-dir jupyter-rsession-proxy
+
+RUN alias get-jupyter-token="jupyter server list | grep -o 'token=[[:alnum:]]*' | sed 's/token=//'"
