--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,9 +11,7 @@
 	"forwardPorts": [8888],
 	"portsAttributes": {
 		"8888": {
-			"label": "RStudio",
-			"requireLocalPort": true,
-			"onAutoForward": "ignore"
+			"label": "RStudio"
 		}
 	},
 
@@ -39,5 +37,10 @@
 	"postCreateCommand": "rmdir /home/jovyan/work && ln -s /workspaces/rstudio /home/jovyan/work",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "jovyan"
+	"remoteUser": "jovyan",
+	"runArgs": [
+			"--user=root",
+			"--env=GRANT_SUDO=yes",
+			"--env=RESTARTABLE=yes"
+	]
 }
